<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@xml/font"
        >
        <TextView
            android:textColor="@color/black"
            android:id="@+id/todo"
            style="@style/TitleTheme"
            android:text="@string/passphraseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:gravity="center"
            android:textSize="50sp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="7dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="50"
            android:background="@xml/arrondi_principal"
            android:padding="10dp"
            android:orientation="vertical">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:text="@string/hintPassphrase"
                android:textAlignment="center"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/userInputText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:textSize="50sp"
                android:hint="@string/answers"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/passphraserule"
                />

            <Button
                android:id="@+id/buttonValider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:textSize="30sp"
                android:text="@string/butonValidate" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

