<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/BackgroundLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@xml/font">
        <TextView
            android:id="@+id/TitleTheme"
            style="@style/TitleTheme"
            android:text="@string/themesMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@color/black">

        </TextView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="2"
            android:background="@xml/arrondi_principal"
            android:padding="10dp">
        <RadioGroup
            android:id="@+id/RadioGroupTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:textColor="@color/black"
                android:id="@+id/RadioButton1"
                android:text="@string/defaultTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="50sp"
                android:background="@xml/contenu"
                android:padding="10dp"
                android:elevation="5dp"
                android:layout_marginBottom="7dp" />

            <RadioButton
                android:id="@+id/RadioButton2"
                android:text="@string/darkTheme"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="40sp"
                android:background="@xml/contenu"
                android:padding="10dp"
                android:elevation="5dp"
                android:layout_marginBottom="7dp" />

            <RadioButton
                android:textColor="@color/black"
                android:id="@+id/RadioButton3"
                android:text="@string/blueTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="50sp"
                android:background="@xml/contenu"
                android:padding="10dp"
                android:elevation="5dp"
                android:layout_marginBottom="7dp" />

            <RadioButton
                android:textColor="@color/black"
                android:id="@+id/RadioButton4"
                android:text="@string/redTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="50sp"
                android:background="@xml/contenu"
                android:padding="10dp"
                android:elevation="5dp"
                android:layout_marginBottom="7dp" />
        </RadioGroup>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@xml/menu_arrondi"
            android:orientation="horizontal"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="end"
            android:paddingTop="0dp"
            >
            <Button
                android:id="@+id/theme_to_alarms"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/butonNameAlarms"
                android:textColor="#000000"
                android:onClick="alarme"
                android:background="#00363636">

            </Button>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:src="@drawable/ic_barre_menu"
                android:layout_weight="1"
                >

            </ImageView>
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/butonNameParameters"
                android:textColor="#FF592A"
                android:layout_weight="1"
                android:background="#00363636">

            </Button>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>