<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@xml/font"
        >

        <TextView
            android:textColor="@color/black"
            android:id="@+id/TitleTheme"
            style="@style/TitleTheme"
            android:text="@string/calculMG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:gravity="center"
            android:textSize="50sp">
        </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="7dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="50"
            android:background="@xml/arrondi_principal"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:text="0/5"
                android:textSize="50dp"

                android:textAlignment="center" />

            <TextView
                android:id="@+id/CalculTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:text="Calcul"
                android:textAlignment="center"
                android:textSize="100dp" />

            <EditText
                android:id="@+id/reponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:textSize="50dp"
                android:hint="@string/answers"
                android:inputType="number" />

            <Button
                android:id="@+id/commencer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:textSize="30sp"
                android:text="@string/butonValidate" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>