<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@xml/font"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:text="@string/yourAlarms"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="@color/black">
        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="2"
            android:background="@xml/arrondi_principal"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <!--<Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="10:35"
                    android:textSize="60dip"
                    android:background="@xml/contenu"
                    android:padding="10dp"
                    android:elevation="5dp"
                    android:layout_marginBottom="7dp">

                </Switch>-->
                <LinearLayout
                    android:id="@+id/show_alarms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                </LinearLayout>

                <Button
                    android:id="@+id/main_to_creeralarme"
                    android:layout_width="47dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:elevation="5dp"
                    android:text="@string/plus"
                    android:textSize="20sp"
                    >

                </Button>

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@xml/menu_arrondi"
            android:orientation="horizontal"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="end"
            android:paddingTop="0dp"
            >
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/butonNameAlarms"
                android:textColor="#FF592A"
                android:background="#00363636">

            </Button>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:src="@drawable/ic_barre_menu"
                android:layout_weight="1"
                >

            </ImageView>
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/butonNameParameters"
                android:textColor="#000000"
                android:layout_weight="1"
                android:id="@+id/main_to_parametre"
                android:background="#00363636">

            </Button>



        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>